<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".LoginActivity">

    <!-- Profile ImageView -->
    <ImageView
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_above="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/profile_user" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!-- Header Text -->
        <TextView
            style="@style/RegisterHeader"
            android:layout_marginBottom="16dp"
            android:text="@string/Login_title"
            android:textSize="25dp" />

        <!-- Email EditText -->
        <EditText
            android:id="@+id/email_editText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_edit_text"
            android:hint="@string/your_email_hint" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/password_editText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_edit_text"
            android:hint="@string/your_password_hint" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            style="@style/RegisterButton"
            android:background="@drawable/corner_button"
            android:text="@string/login_button" />

        <!-- Sign Up TextView -->
        <TextView
            android:id="@+id/signup_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/signup_text"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>